--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     container_name: financial-core
     volumes:
       - ./app:/var/www/
-      - ./.docker-compose/backend/config/php.ini:/usr/local/etc/php/php.ini
+      - ./.docker/app/config/php.ini:/usr/local/etc/php/php.ini
       - ./.data/app/log/webserver:/var/log/apache2
     environment:
       - WWW_DATA_USER_ID=${WWW_DATA_USER_ID}
