change apache virtual host configuration

--- a/.docker/app/config/default.conf
+++ b/.docker/app/config/default.conf
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
-    ServerAdmin majid.akbari@devolon.fi
+    ServerAdmin majidakbariiii@gmail.com
     ServerName localhost
-    ServerAlias talent
+    ServerAlias financial-core
     DocumentRoot /var/www/public
 
     ErrorLog ${APACHE_LOG_DIR}/error.log
