add swagger documentation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,6 @@ services:
     ports:
       - "${SWAGGER_PORT}:8080"
     volumes:
-      - ./.data/swagger/openapi.yaml:/openapi.yaml
+      - ./.data/swagger/:/swagger
     environment:
-      SWAGGER_JSON: /openapi.yaml
+      SWAGGER_JSON: /swagger/openapi.yaml
